--- a/DateTimeProviders.Dimensions/DateTimeProviders.Dimensions.csproj
+++ b/DateTimeProviders.Dimensions/DateTimeProviders.Dimensions.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>Tsessebe</Title>
+        <Description>Testable Date Time Provider additional extentions</Description>
+        <Copyright>Tsessebe</Copyright>
+        <RepositoryUrl>https://github.com/Tsessebe/DateTimeProviders</RepositoryUrl>
+        <PackageId>DateTimeProviders.Dimensions</PackageId>
+        <Authors>Tsessebe</Authors>
     </PropertyGroup>
 
 </Project>
