--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,9 +36,7 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Setup NuGet
-        uses: nuget/setup-nuget@v2
-        with: 
-          nuget-api-key: ${{secrets.NUGET_API_KEY}}
+        uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore dependencies
         run: dotnet restore $SOLUTION
